<resources>
    <!-- App -->
    <string name="app_name">3Asks</string>
    <string name="title_activity_asks_activity">Episode</string>

    <!-- Tabs -->
    <string name="tab_when">When</string>
    <string name="tab_what">What</string>
    <string name="tab_why">Why</string>
    <string name="tab_arguments">Arguments</string>
    <string name="tab_objections">Objections</string>
    <string name="tab_belief_details">Details</string>

    <!-- hints -->
    <!-- note that the same hint can be utilized in more than one view (for example, in creation and edition) -->
    <string name="hint_episode_name">Episode Name</string>
    <string name="hint_episode_date">Date</string>
    <string name="hint_episode_period">Day Period</string>
    <string name="hint_episode_description">Description</string>
    <string name="hint_reaction_description">What you feel or do?</string>
    <string name="hint_argument_description">What proves this thought?</string>
    <string name="hint_belief_description">What were you thinking?</string>
    <string name="hint_objection_description">What refutes this thought?</string>
    <string name="hint_reaction_category">How do you classify this reaction?</string>
    <string name="hint_belief">Belief</string>
    <string name="hint_unhelpful_thinking_styles">Thinking styles</string>

    <!-- dialogs' labels -->
    <string name="episode_dialog_positive_button">Create</string>
    <string name="episode_dialog_negative_button">Cancel</string>
    <string name="episode_dialog_title">Create an episode</string>
    <string name="episode_dialog_error_empty_episode_name">Episode name is required!</string>
    <string name="episode_save_dialog_title">Save changes in the details of the episode?</string>
    <string name="save_dialog_title">Save changes?</string>
    <string name="episode_save_dialog_save_button">Yes</string>
    <string name="episode_save_dialog_discard_button">No</string>
    <string name="belief_save_dialog_title">Save changes in the details of the belief?</string>
    <string name="belief_save_dialog_save_button">Yes</string>
    <string name="belief_save_dialog_discard_button">No</string>
    <string name="reaction_dialog_edit_title">Edit the reaction</string>
    <string name="reaction_dialog_delete_button">Delete</string>
    <string name="reaction_dialog_cancel_button">Cancel</string>
    <string name="reaction_dialog_save_button">Save</string>
    <string name="reaction_dialog_create_title">Create a reaction</string>
    <string name="reaction_dialog_create_button">Create</string>
    <string name="reaction_dialog_error_empty_reaction">Reaction is required!</string>
    <string name="belief_dialog_create_button">Create</string>
    <string name="belief_dialog_cancel_button">Cancel</string>
    <string name="belief_dialog_title">Register a belief</string>
    <string name="belief_dialog_error_empty_belief">Thought is required!</string>
    <string name="argument_dialog_save_button">Save</string>
    <string name="argument_dialog_cancel_button">Cancel</string>
    <string name="argument_dialog_delete_button">Delete</string>
    <string name="argument_dialog_edit_title">Edit the argument</string>
    <string name="argument_dialog_create_button">Create</string>
    <string name="argument_dialog_create_title">Create an argument</string>
    <string name="argument_dialog_error_empty_argument">Argument is required!</string>
    <string name="objection_dialog_save_button">Save</string>
    <string name="objection_dialog_delete_button">Delete</string>
    <string name="objection_dialog_edit_title">Edit the objection</string>
    <string name="objection_dialog_create_button">Create</string>
    <string name="objection_dialog_create_title">Create an objection</string>
    <string name="objection_dialog_error_empty_objection">Objection is required!</string>
    <string name="objection_dialog_cancel_button">Cancel</string>
    <string name="onAdLoadingErrorMessage">Error in loading an advertising. Please, check your Internet connection and retry.</string>
    <string name="onAdLoadingErrorConfirmButton">Retry</string>

    <!-- string arrays -->
    <string-array name="reaction_categories_array">
        <item>Physical</item>
        <item>Feeling</item>
        <item>Action</item>
    </string-array>
    <string-array name="episode_period_array">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
        <item>Night</item>
    </string-array>

    <!-- Unhelpful thinking styles' labels  -->
    <string name="unhelpful_thinking_style_mental_filter_label">Negative focusing</string>
    <string name="unhelpful_thinking_style_mind_reading_label">Mind reading</string>
    <string name="unhelpful_thinking_style_predictive_thinking_label">Fortune telling</string>
    <string name="unhelpful_thinking_style_personalisation_label">Personalisation</string>
    <string name="unhelpful_thinking_style_catastrophising_label">Catastrophising</string>
    <string name="unhelpful_thinking_style_black_white_label">Radicalisation</string>
    <string name="unhelpful_thinking_style_overgeneralisation_label">Generalisation</string>
    <string name="unhelpful_thinking_style_shoulding_musting_label">Pressuring</string>
    <string name="unhelpful_thinking_style_magnification_minimisation_label">Comparation</string>
    <string name="unhelpful_thinking_style_others_empowerment_label">Other\'s empowerment</string>
    <string name="unhelpful_thinking_style_labeling_label">Labeling</string>

    <!-- Toast messages -->
    <string name="toast_message_creating_episode">Creating episode…</string>
    <string name="toast_message_creating_belief">Creating belief…</string>
    <string name="toast_message_creating_reaction">Creating reaction…</string>
    <string name="toast_message_belief_saved">Belief details saved!</string>
    <string name="toast_message_episode_saved">Episode details saved!</string>
    <string name="toast_deleted_episode">Episode deleted!</string>
    <string name="toast_error_deleted_episode">Failed to delete the episode!</string>
    <string name="toast_deleted_belief">Belief deleted!</string>
    <string name="toast_error_deleted_belief">Failed to delete the belief!</string>

    <string name="help_info_dialog_website_label">Website</string>
    <string name="help_info_dialog_example_label">Example of use</string>
    <string name="help_info_dialog_how_it_works_label">How it works?</string>
    <string name="help_info_dialog_terms_of_use_label">Terms of use</string>
    <string name="help_info_dialog_title">Help and Info</string>
    <string name="help_info_dialog_privacy_policy_label">Privacy policy</string>
    <string name="help_info_dialog_contact_label">Contact (support and feedback)</string>
    <string name="help_info_dialog_made_by_label">Made by Ricardo Polizeli</string>
    <string name="help_info_dialog_email_label">3asksapp@gmail.com</string>

    <!-- menus' titles-->
    <string name="menu_delete">Delete</string>
    <string name="menu_delete_belief">Delete belief</string>
    <string name="menu_help_and_info">Help and Info</string>

    <!-- Nav destinations labels -->
    <string name="destination_episodes">Episodes</string>
    <string name="destination_help_info">Help and Info</string>
    <string name="destination_search">Search</string>
    <string name="destination_asks_unnamed_episode">Unnamed Episode</string>
    <string name="destination_asks_unnamed_reaction">Unnamed Reaction</string>
    <string name="destination_asks_unnamed_argument">Unnamed Argument</string>
    <string name="destination_asks_unnamed_objection">Unnamed Objection</string>
    <string name="destination_asks_unnamed_belief">Unnamed Belief</string>
    <string name="destination_edit_episode_fragment">Edit episode</string>
    <string name="destination_edit_belief_fragment">Edit belief</string>
    <string name="destination_edit_reaction_fragment">Edit reaction</string>
    <string name="destination_edit_argument_fragment">Edit argument</string>
    <string name="destination_edit_objection_fragment">Edit objection</string>

    <!-- search headers-->
    <string name="search_header_episodes">Episodes</string>
    <string name="search_header_reactions">Reactions</string>
    <string name="search_header_beliefs">Beliefs</string>
    <string name="search_header_arguments">Arguments</string>
    <string name="search_header_objections">Objections</string>
</resources>
