<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/thinkingStylesLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/radicalisationCheckBox"
        style="@style/thinkingStyleCheckBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unhelpful_thinking_style_black_white_label"
        app:fontFamily="@font/roboto" />

    <CheckBox
        android:id="@+id/catastrophisingCheckBox"
        style="@style/thinkingStyleCheckBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minHeightItemRecyclerView"
        android:text="@string/unhelpful_thinking_style_catastrophising_label"
        app:fontFamily="@font/roboto" />

    <CheckBox
        android:id="@+id/comparationCheckBox"
        style="@style/thinkingStyleCheckBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minHeightItemRecyclerView"
        android:text="@string/unhelpful_thinking_style_magnification_minimisation_label"
        app:fontFamily="@font/roboto" />

    <CheckBox
        android:id="@+id/negativeFocusingCheckBox"
        style="@style/thinkingStyleCheckBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minHeightItemRecyclerView"
        android:text="@string/unhelpful_thinking_style_mental_filter_label"
        app:fontFamily="@font/roboto" />

    <CheckBox
        android:id="@+id/generalisationCheckBox"
        style="@style/thinkingStyleCheckBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minHeightItemRecyclerView"
        android:text="@string/unhelpful_thinking_style_overgeneralisation_label"
        app:fontFamily="@font/roboto" />

    <CheckBox
        android:id="@+id/fortuneTellingCheckBox"
        style="@style/thinkingStyleCheckBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minHeightItemRecyclerView"
        android:text="@string/unhelpful_thinking_style_predictive_thinking_label"
        app:fontFamily="@font/roboto" />

    <CheckBox
        android:id="@+id/pressuringCheckBox"
        style="@style/thinkingStyleCheckBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minHeightItemRecyclerView"
        android:text="@string/unhelpful_thinking_style_shoulding_musting_label"
        app:fontFamily="@font/roboto" />

    <CheckBox
        android:id="@+id/othersEmpowermentCheckBox"
        style="@style/thinkingStyleCheckBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minHeightItemRecyclerView"
        android:text="@string/unhelpful_thinking_style_others_empowerment_label"
        app:fontFamily="@font/roboto" />

    <CheckBox
        android:id="@+id/personalisationCheckBox"
        style="@style/thinkingStyleCheckBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minHeightItemRecyclerView"
        android:text="@string/unhelpful_thinking_style_personalisation_label"
        app:fontFamily="@font/roboto" />

    <CheckBox
        android:id="@+id/mindReadingCheckBox"
        style="@style/thinkingStyleCheckBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minHeightItemRecyclerView"
        android:text="@string/unhelpful_thinking_style_mind_reading_label"
        app:fontFamily="@font/roboto" />

    <CheckBox
        android:id="@+id/labelingCheckBox"
        style="@style/thinkingStyleCheckBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minHeightItemRecyclerView"
        android:text="@string/unhelpful_thinking_style_labeling_label"
        app:fontFamily="@font/roboto" />

    <TextView
        android:id="@+id/thinkingStylesLabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_unhelpful_thinking_styles"
        app:fontFamily="@font/roboto" />

</LinearLayout>