<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/episodesFragment">

    <fragment
        android:id="@+id/episodesFragment"
        android:name="com.rgp.asks.fragments.EpisodesFragment"
        android:label="@string/destination_episodes"
        tools:layout="@layout/fragment_episodes">
        <action
            android:id="@+id/action_episodesFragment_to_helpInfoFragment"
            app:destination="@id/helpInfoFragment" />
        <action
            android:id="@+id/action_episodesFragment_to_asksActivity"
            app:destination="@id/asksActivity">
            <argument
                android:name="EPISODE_ID"
                android:defaultValue="-1"
                app:argType="integer" />
            <argument
                android:name="ARG_EPISODE_TITLE"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/helpInfoFragment"
        android:name="com.rgp.asks.fragments.HelpInfoFragment"
        android:label="@string/destination_help_info"
        tools:layout="@layout/fragment_help_info" />
    <fragment
        android:id="@+id/asksActivity"
        android:name="com.rgp.asks.fragments.AsksFragment"
        android:label="{ARG_EPISODE_TITLE}"
        tools:layout="@layout/fragment_asks">
        <action
            android:id="@+id/action_asksActivity_to_addNewBeliefFragment"
            app:destination="@id/addNewBeliefFragment" />
        <action
            android:id="@+id/action_asksActivity_to_reactionFragment"
            app:destination="@id/reactionFragment" />
    </fragment>
    <fragment
        android:id="@+id/addNewBeliefFragment"
        android:name="com.rgp.asks.fragments.AddNewBeliefFragment"
        android:label="@string/destination_edit_belief_fragment"
        tools:layout="@layout/fragment_add_belief">
        <action
            android:id="@+id/action_addNewBeliefFragment_to_argumentFragment"
            app:destination="@id/argumentFragment" />
        <action
            android:id="@+id/action_addNewBeliefFragment_to_objectionFragment"
            app:destination="@id/objectionFragment" />
    </fragment>
    <fragment
        android:id="@+id/reactionFragment"
        android:name="com.rgp.asks.fragments.ReactionFragment"
        android:label="@string/destination_edit_reaction_fragment"
        tools:layout="@layout/fragment_edit_reaction" />
    <fragment
        android:id="@+id/argumentFragment"
        android:name="com.rgp.asks.fragments.ArgumentFragment"
        android:label="@string/destination_edit_argument_fragment"
        tools:layout="@layout/fragment_edit_argument" />
    <fragment
        android:id="@+id/objectionFragment"
        android:name="com.rgp.asks.fragments.ObjectionFragment"
        android:label="@string/destination_edit_objection_fragment"
        tools:layout="@layout/fragment_edit_objection" />
</navigation>