<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/argumentDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.rgp.asks.views.TextInputLayout
        android:id="@+id/argumentTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:errorMessage="@string/argument_dialog_error_empty_argument"
        app:label="@string/hint_argument_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:numberOfLines="6" />

    <Button
        android:id="@+id/neutralArgumentButton"
        style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/reaction_dialog_delete_button"
        android:textColor="@color/colorAccent3"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/argumentTextInputLayout" />

    <Button
        android:id="@+id/negativeArgumentButton"
        style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/reaction_dialog_cancel_button"
        android:textColor="@color/colorAccent3"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/positiveArgumentButton"
        app:layout_constraintTop_toBottomOf="@+id/argumentTextInputLayout" />

    <Button
        android:id="@+id/positiveArgumentButton"
        style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/reaction_dialog_save_button"
        android:textColor="@color/colorAccent3"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/argumentTextInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>