<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reactionConstraintLayout"
    android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:padding="24dp">

    <com.rgp.asks.views.SpinnerInputLayout
        android:id="@+id/reactionClassSpinnerInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:entries="@array/reaction_categories_array"
        app:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reactionTextInputLayout"
        app:spinnerLabel="@string/hint_reaction_category"></com.rgp.asks.views.SpinnerInputLayout>

    <com.rgp.asks.views.TextInputLayout
        android:id="@+id/reactionTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorMessage="@string/reaction_dialog_error_empty_reaction"
        app:label="@string/hint_reaction_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:numberOfLines="2" />

</androidx.constraintlayout.widget.ConstraintLayout>