<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/asksCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/indeterminateBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <com.rgp.asks.views.DisableSwipeViewPager
        android:id="@+id/disableSwipeViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:tabGravity="fill"
            app:tabMode="fixed">
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabWhen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_when" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabWhat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_what" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabWhy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_why" />
        </com.google.android.material.tabs.TabLayout>
    </com.rgp.asks.views.DisableSwipeViewPager>

</androidx.coordinatorlayout.widget.CoordinatorLayout>